# notebook-template

./: README.md  pyproject.toml
notebooks/: notebook_1.ipynb  notebook_2.ipynb
src/: greeting.py
